--- a/testdist/index.html
+++ b/testdist/index.html
@@ -1,4 +1,4 @@
-<d:html>
+
     <!DOCTYPE html>
     <html lang="en">
     <head>
@@ -7,37 +7,20 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>{{ data.title }}</title>
+        <title>Test Title</title>
     </head>
     <body>
         <div class="test">
-            {{ components.test, ./components, test }}
+            
+    <div>
+        TEST b !!
+    </div>
+
         </div>
-        <div id="{{ data.testid }}">
+        <div id="test">
         </div>
         <div>
             it is successfully built and showing the test results!!!!
         </div>
     </body>
     </html>
-</d:html>
-<d:css>
-    .test {
-        font-size: 48px;
-        color: #666;
-    }
-</d:css>
-<d:js>
-    function test() {
-        document.getElementById("{{ data.testid }}").innerHTML = "^ _ ^";
-    }
-
-    console.log("loaded")
-</d:js>
-<d:test>
-    {
-        "a":"a",
-        "b":"b",
-        "c":"c"
-    }
-</d:test>
