--- a/testdist/index.html
+++ b/testdist/index.html
@@ -14,6 +14,9 @@
             
     <div>
         TEST b !!
+        
+    Nested components in different directories
+ test!!
     </div>
 
         </div>
