--- a/testdist/index.html
+++ b/testdist/index.html
@@ -25,5 +25,12 @@
         <div>
             it is successfully built and showing the test results!!!!
         </div>
+
+        <script type="module">
+            import { add } from './test.mjs';
+
+            console.log(add(2, 3));
+        </script>
+
     </body>
     </html>
