--- a/testdist/index.html
+++ b/testdist/index.html
@@ -23,7 +23,7 @@
         <div id="test">
         </div>
         <div>
-            it is successfully built and showing the test results!!!!
+            it is successfully built and showing the test results!!
         </div>
 
         <script type="module">
