--- a/testdist/index.html
+++ b/testdist/index.html
@@ -2,7 +2,6 @@
     <!DOCTYPE html>
     <html lang="en">
     <head>
-        <script src="main.js"></script>
         <link rel="stylesheet" href="style.css">
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,7 +14,7 @@
     <div>
         TEST b !!
         
-    Nested components in different directories
+    Nested components in different directories asdas
  test!!
     </div>
 
@@ -25,12 +24,10 @@
         <div>
             it is successfully built and showing the test results!!
         </div>
-
-        <script type="module">
-            import { add } from './test.mjs';
-
-            console.log(add(2, 3));
-        </script>
-
+        <div id="test">asdasdass</div>
+        
+        <button onclick="addComponent();">Click me to add innerHTML</button>
+        <div id="comptesting"></div>
+        <script src="main.js"></script>
     </body>
     </html>
