--- a/testdist/index.html
+++ b/testdist/index.html
@@ -30,6 +30,18 @@
         
         <button onclick="addComponent();">Click me to add innerHTML</button>
         <div id="comptesting"></div>
+                    <pre>
+                        <code>
+                            &lt;d:html&gt;
+                                &lcub;&lcub; @component.test, ./src/components &rcub;&rcub;
+                            &lt;/d:html&gt;
+                        </code>
+                    </pre>
+                    <br />
+                    <h2 class="subtitle">
+                        ./src/components/test.tot
+                    </h2>
+
         <script src="main.js"></script>
     </body>
     </html>
