--- a/testdist/index.html
+++ b/testdist/index.html
@@ -40,9 +40,13 @@
                     <br />
                     
 Tot data test. td.
-
+2
                     
 Tot data test. td.
+
+                    <h1>This is markdown test!</h1>
+
+                    <h1>This is markdown test!</h1>
 
                     <h2 class="subtitle">
                         ./src/components/test.tot
