--- a/testdist/index.html
+++ b/testdist/index.html
@@ -45,8 +45,10 @@ Tot data test. td.
 Tot data test. td.
 
                     <h1>This is markdown test!</h1>
+<p>asdas</p>
 
                     <h1>This is markdown test!</h1>
+<p>asdas</p>
 
                     <h2 class="subtitle">
                         ./src/components/test.tot
