--- a/testdist/index.html
+++ b/testdist/index.html
@@ -32,9 +32,6 @@
         <div id="comptesting"></div>
                     <pre>
                         <code>
-                            &lt;d:html&gt;
-                                &lcub;&lcub; @component.test, ./src/components &rcub;&rcub;
-                            &lt;/d:html&gt;
                         </code>
                     </pre>
                     <br />
@@ -46,9 +43,11 @@ Tot data test. td.
 
                     <h1>This is markdown test!</h1>
 <p>asdas</p>
+<p>asdasdasd</p>
 
                     <h1>This is markdown test!</h1>
 <p>asdas</p>
+<p>asdasdasd</p>
 
                     <h2 class="subtitle">
                         ./src/components/test.tot
