--- a/testdist/index.html
+++ b/testdist/index.html
@@ -47,22 +47,22 @@ ahahah
                     
 Tot data test. td.
 2
-                    
-Tot data test. td.
-
+                    Tot data test. td.
                     <h1>This is markdown test!</h1>
 <p>asdas</p>
 <p>asdasdasd</p>
-
+<p>{{ @component, ./es/def.md }}</p>
+ 11
                     <h1>This is markdown test!</h1>
 <p>asdas</p>
 <p>asdasdasd</p>
-
+<p>{{ @component, ./es/def.md }}</p>
+ 22
                     {{ component }}
                     <h2 class="subtitle">
                         ./src/components/test.tot
                     </h2>
-                    1!
+                    1!!
         <script src="main.js"></script>
     </body>
     </html>
