--- a/testdist/index.html
+++ b/testdist/index.html
@@ -26,7 +26,10 @@ ahahah
 ahahah
 
  test!!
-        9
+        "
+    
+    Nested components in different directories 
+<button }}>o3o</button }}>안녕하십니까? Tot data test. td." title: Test Title
 
     </div>
 
