--- a/test/pages/index.html
+++ b/test/pages/index.html
@@ -9,6 +9,7 @@
       type="button"
       onclick="alert('Hello world!')"
     />
+    <component @name="button" type="button" onclick="alert('Hello world!')" />
     <component @name="footer" @type="footer" />
     {{ result = "Hello World!"; }}
     <md style="color: red"> ## asdasd </md>
