--- a/test/pages/index.html
+++ b/test/pages/index.html
@@ -13,5 +13,6 @@
     <component @name="footer" @type="footer" />
     {{ result = "Hello World!"; }}
     <md style="color: red"> ## asdasd </md>
+    <md> test </md>
   </body>
 </html>
