--- a/test/pages/index.html
+++ b/test/pages/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head> </head>
+  <head>
+    <script src="/scripts/testTS.js"></script>
+  </head>
   <body>
     test index!!
     <component
