--- a/test/pages/ko/index.html
+++ b/test/pages/ko/index.html
@@ -4,15 +4,28 @@
   <body>
     kokokokokokokokokokokokokokokokokokokokokoko
     <component
-      @name="button"
-      @type="button"
+      @path="button"
+      @tag="button"
       type="button"
       onclick="alert('Hello world!')"
     />
-    <component @name="button" type="button" onclick="alert('Hello world!')" />
-    <component @name="footer" @type="footer" />
-    {{ result = "Hello World!"; }}
-    <md style="color: red"> ## asdasd </md>
-    <md> test </md>
+    <component @path="button" type="button" onclick="alert('Hello world!')" />
+    <component @path="footer" @tag="footer" />
+    <script @type="md" style="color: red" type="text/markdown">
+      ## test
+
+      test
+
+      - test
+    </script>
+    <script @type="ts" type="text/typescript">
+      // This is for templating html content
+      let world: string = "Hello world! from typescript";
+      result = world;
+    </script>
+    <script @type="js" type="text/javascript">
+      // This is for templating html content
+      result = "Hello world! from javascript";
+    </script>
   </body>
 </html>
