--- a/test/pages/index.html
+++ b/test/pages/index.html
@@ -26,6 +26,19 @@
       - asdasd
 
       This is working fine now!!!
+      <br />
+      <br />
+      <br />
+      <br />
+      asd asdas `asdas`
+
+      ```
+
+      asdasdasdasdasd
+         asdasdasdasdasddas
+      adfadf
+      fdafadf
+      ```
     </script>
     <script @type="ts" type="text/typescript">
       // This is for templating html content
