--- a/test/pages/index.html
+++ b/test/pages/index.html
@@ -39,6 +39,12 @@
       adfadf
       fdafadf
       ```
+
+      ```html
+      <script>
+        asd
+      <\/script>
+      ```
     </script>
     <script @type="ts" type="text/typescript">
       // This is for templating html content
