--- a/test/pages/index.html
+++ b/test/pages/index.html
@@ -44,6 +44,7 @@
       <script>
         asd
       <\/script>
+      <\\/script>
       ```
     </script>
     <script @type="ts" type="text/typescript">
