--- a/test/pages/index.html
+++ b/test/pages/index.html
@@ -2,8 +2,12 @@
 <html>
   <head>
     <script src="/scripts/testTS.js"></script>
+    <link rel="stylesheet" href="/styles/test.css">
+    <link rel="stylesheet" href="/bulma.min.css">
   </head>
   <body>
+    <img src="/images/f16g5sg.avif">
+    <button class="button">Button</button>
     test index!!
     <component
       @path="button"
