--- a/test/content-theme/content.html
+++ b/test/content-theme/content.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>{{ content.title }}</title>
 </head>
+
 <body>
   <main>
     <h1>{{ content.title }}</h1>
@@ -12,27 +14,29 @@
       {{ content.body }}
     </article>
     <nav>
-    <script @type="js" type="text/javascript">
-      const args = process.argv;
-      const contentDataString = args[args.length - 1];
-      const contentData = JSON.parse(contentDataString);
+      <script @type="js" type="text/javascript">
+        const args = process.argv;
+        const contentDataString = args[args.length - 1];
+        const contentData = JSON.parse(contentDataString);
 
-      if(contentData.prevLink) {
-        console.log(`
-          <div>
-            <a href="{{ content.prevLink }}">{{ content.prevName }}</a>
-          </div>
-        `);
-      }
-      if(contentData.nextLink) {
-        console.log(`
-          <div>
-            <a href="{{ content.nextLink }}">{{ content.nextName }}</a>
-          </div>
-        `);
-      }
-    </script>
+        if (Array.isArray(contentData.nearby))
+        {
+          console.log(`<ul>`);
+          contentData.nearby.forEach(post =>
+          {
+            if (post.link === contentData.urlPath)
+            {
+              console.log(`<li><span>${post.title}</span></li>`);
+            } else
+            {
+              console.log(`<li><a href="${post.link}">${post.title}</a></li>`);
+            }
+          });
+          console.log(`</ul>`);
+        }
+      </script>
     </nav>
   </main>
 </body>
+
 </html>
