--- a/test/pages/index.html
+++ b/test/pages/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <img src="/images/f16g5sg.avif">
+  <img src="/images/f16g5sg.webp">
   <button class="button">Button</button>
   test index!!
   <component @path="button" @tag="button" type="button" onclick="alert('Hello world!')" />
