--- a/src/core/backoffice/client/index.html
+++ b/src/core/backoffice/client/index.html
@@ -29,7 +29,7 @@
 
     <main class="content">
       <h1>Markdown Editor</h1>
-
+      <div id="status-message" class="status-message"></div>
       <div class="editor-layout">
         <div class="markdown-file-list-section">
           <h3>📁 Files in /contents</h3>
