--- a/test-project/content-theme/content.html
+++ b/test-project/content-theme/content.html
@@ -36,6 +36,24 @@
         }
       </script>
     </nav>
+
+    <script @type="js" type="text/javascript">
+      const args = JSON.parse(process.argv[1]);
+      const categoryLinks = args.categoryLinks;
+
+      console.log("Category Links:");
+      for (const [category, link] of Object.entries(categoryLinks))
+      {
+        console.log(`${category}: ${link}`);
+      }
+
+      console.log("<nav><ul>");
+      for (const [category, link] of Object.entries(categoryLinks))
+      {
+        console.log(`<li><a href="${link}">${category}</a></li>`);
+      }
+      console.log("</ul></nav>");
+    </script>
   </main>
 </body>
 
