--- a/test-project/content-theme/en/content-list.html
+++ b/test-project/content-theme/en/content-list.html
@@ -60,12 +60,16 @@
       console.log("Category Links:");
       for (const [category, link] of Object.entries(categoryLinks))
       {
+        const [theme] = category.split("/");
+        if (theme !== "en") continue;
         console.log(`${category}: ${link}`);
       }
 
       console.log("<nav><ul>");
       for (const [category, link] of Object.entries(categoryLinks))
       {
+        const [theme] = category.split("/");
+        if (theme !== "en") continue;
         console.log(`<li><a href="${link}">${category}</a></li>`);
       }
       console.log("</ul></nav>");
