--- a/test-project/content-theme/en/content.html
+++ b/test-project/content-theme/en/content.html
@@ -9,7 +9,7 @@
 <body>
   <main>
     <h1>{{ content.title }}</h1>
-    <p><em>Published: {{ content.published }}</em></p>
+    <p><em>Published: {{ content.time }}</em></p>
     <article>
       {{ content.body }}
     </article>
@@ -44,12 +44,16 @@
       console.log("Category Links:");
       for (const [category, link] of Object.entries(categoryLinks))
       {
+        const [theme] = category.split("/");
+        if (theme !== "en") continue;
         console.log(`${category}: ${link}`);
       }
 
       console.log("<nav><ul>");
       for (const [category, link] of Object.entries(categoryLinks))
       {
+        const [theme] = category.split("/");
+        if (theme !== "en") continue;
         console.log(`<li><a href="${link}">${category}</a></li>`);
       }
       console.log("</ul></nav>");
